Fix exclamation point position on Firefox

--- a/src/styles/endings.scss
+++ b/src/styles/endings.scss
@@ -60,10 +60,11 @@
 					font-size: 2.5em;
 					float: inline-end;
 					position: absolute;
+					top: 16px;
 					right: 0;
 					left: 0;
-					justify-self: center;
-					top: 16px;
+					display: grid;
+					justify-content: center;
 					color: rgb(10, 164, 171);
 					text-shadow: 0 0 6px #005aff;
 
